css/xpather.css
@-webkit-keyframes blink {
    0% {
        opacity: 1;
    }
    50% {
        opacity: .65;
    }
    100% {
        opacity: 1;
    }
}

#xpather {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	height: 50px;
	width: 100%;
	padding: 0 208px 0 52px;
	font-family: Helvetica, Arial, Verdana, sans-serif;
	border-bottom: 5px solid #111;
	box-sizing: border-box;
	box-shadow: 0 4px 12px rgba(16, 16, 16, .25);
	background: #000 url('chrome-extension://__MSG_@@extension_id__/img/search.png') 12px 11px no-repeat;
	z-index: 10000000;
	text-shadow: none;
	-webkit-font-smoothing: subpixel-antialiased;
}

#xpather-form {
	margin: 0;
	padding: 0;
}

#xpather-xpath {
	background: #000;
	border: 0;
	font-size: 16px;
	font-weight: 400;
	font-family: 'Droid Sans Mono', monospace;
	color: #fff;
	line-height: 42px;
	padding: 6px 0 2px;
	height: 44px;
	width: 100%;
	box-sizing: border-box;
	box-shadow: none;
	outline: 0;
	margin: 0;
	text-shadow: none;
}

#xpather-xpath::-webkit-input-placeholder {
	color: #666;
}

#xpather-result {
	position: absolute;
	right: 58px;
	top: 0;
	font-size: 28px;
	font-weight: 700;
	color: #fff;
	line-height: 50px;
}

#xpather-result.xpather-no-results {
	color: #ff4630;
}

#xpather-sidebar-toggler {
	position: absolute;
	top: 12px;
	right: 16px;
	width: 26px;
	height: 26px;
	cursor: pointer;
	background: url('chrome-extension://__MSG_@@extension_id__/img/sidebar-toggler.png') 0 0 no-repeat;
}

.xpather-sidebar-toggler-active {
	background-position: 0 -26px !important;
}

#xpather-sidebar {
	position: fixed;
	top: 0;
	right: 0;
	width: 20%;
	height: 100%;
	box-sizing: border-box;
	padding-bottom: 50px;
	background: #111;
	z-index: 100000;
	display: none;
	overflow: hidden;
	font-family: Helvetica, Arial, Verdana, sans-serif;
	text-shadow: none;
	-webkit-font-smoothing: subpixel-antialiased;
}

#xpather-sidebar-entries {
	width: 97.5%;
	height: 100%;
	display: block;
	overflow-x: hidden;
	overflow-y: auto;
	box-sizing: border-box;
}

#xpather-sidebar-spacer {
	width: 100%;
	height: 50px;
	display: block;
}

.xpather-sidebar-entry {
	position: relative;
	width: 91%;
	min-height: 39px;
	max-height: 86px;
	box-sizing: border-box;
	padding: 10px;
	margin: 0 4% 0 5%;
	font-size: 12px;
	line-height: 18px;
	clear: both;
	text-align: justify;
	border-bottom: 3px solid #222;
	word-wrap: break-word;
	overflow: hidden;
	text-overflow: ellipsis;
	cursor: pointer;
	transition: all 500ms;
}

.xpather-sidebar-entry span {
	position: relative;
	z-index: 2;
}

.xpather-sidebar-entry:hover {
	max-height: 100%;
	color: #0cacf9 !important;
}

.xpather-sidebar-entry:nth-child(odd) {
	color: #ccc;
}

.xpather-sidebar-entry:nth-child(even) {
	 color: #999;
 }

.xpather-sidebar-entry:last-child {
	margin-bottom: 16px;
}

.xpather-sidebar-entry-info {
	color: #555 !important;
}

.xpather-sidebar-entry-attribute {
	cursor: default;
}

.xpather-sidebar-entry-count {
	position: absolute;
	bottom: 0;
	right: -1px;
	font-size: 36px;
	color: #222;
	font-weight: 700;
}

.xpather-highlight, .xpather-highlight-with-sepia, .xpather-text-hightlight {
	background-color: rgba(237, 194, 20, .25);
	z-index: 99999;
	border-bottom: 1px solid rgb(170, 130, 10);
	text-shadow: none;
}

.xpather-highlight-with-sepia {
	-webkit-filter: sepia(30%);
}

.xpath-important-highlight,
img.xpather-highlight {
	-webkit-transition: all .75s ease-in-out;
	-webkit-animation-direction: normal;
	-webkit-animation-duration: 1.5s;
	-webkit-animation-iteration-count: infinite;
	-webkit-animation-name: blink;
	-webkit-animation-timing-function: ease-in-out;
}

.xpath-important-highlight {
	background-color: rgba(237, 55, 33, .25);
	border-bottom-color: rgb(185, 55, 37);
}

.xpather-position-fix {
	top: 50px !important;
}

.xpather-sidebar-on .xpather-position-fix {
	width: 80% !important;
}

.xpather-on {
	top: 50px;
	position: relative;
}

.xpather-sidebar-on {
	width: 80%;
}

#xpather-sidebar ::-webkit-scrollbar {
	width: 9px;
	padding: 8px;
}

#xpather-sidebar ::-webkit-scrollbar-track,
#xpather-sidebar ::-webkit-scrollbar-corner {
	background-color: #000;
	border-radius: 10px;
}

#xpather-sidebar ::-webkit-scrollbar-thumb {
	background-color: #333;
	border-radius: 10px;
}

#xpather-sidebar ::-webkit-scrollbar-button {
	display: none;
}

